# pytest-smtpd

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: python-package.yml
docs/: CHANGELOG.md  SECURITY.md
src/pytest_smtpd/: __init__.py
tests/: test_fixture.py
