[metadata]
name = package_name
version = package_version
description = package_description
author = package_author
author_email = package_email
long_description = file: README.md
long_description_content_type = text/markdown
keywords = one, two
license = MIT License
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = ">=3.7, <4"
install_requires =
    # add required pacakges here

[options.package_data]
* = *.txt, *.rst, *.md

[options.extras_require]
dev =
    tox
    flake8
    isort
