[metadata]
name = pytest-smtpd
version = attr: pytest_smtpd.__version__
description = package_description
author = James Warne
author_email = bebleo@yahoo.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords = smtp, testing, pytest, email
license = MIT
license_files =
    LICENSE
classifiers =
    Framework :: Pytest
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Source = https://github.com/bebleo/pytest-smtpd
    Documentation = https://github.com/bebleo/pytest-smtpd#readme
    Issues = https://github.com/bebleo/pytest-smtpd/issues

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.7, <4
install_requires =
    pytest
    smtpdfix


[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.rst, *.md

[options.extras_require]
dev =
    tox
    flake8
    isort
    mypy

[flake8]
exclude = env,venv,.tox

[mypy]
files = src/pytest_smtpd
python_version = 3.7
# show_error_codes = True
# allow_redefinition = True
disallow_any_generics = True
# disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
# disallow_untyped_decorators = True
no_implicit_optional = True
# local_partial_types = True
no_implicit_reexport = True
# strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
# warn_unreachable = True
follow_imports = skip
